--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" href="src/main.css">
     <style>
 			body { margin: 0; }
 		</style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="loadingScreen">
+      <p>Loading...</p>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
